<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_back_register"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:text="Back" />

            <LinearLayout
                android:id="@+id/nameUser"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_100sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_first_name_register"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/et_log_reg"
                    android:hint="@string/firstNameUser"
                    android:padding="@dimen/_5sdp" />

                <EditText
                    android:id="@+id/et_last_name_register"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/et_log_reg"
                    android:hint="@string/lastNameUser"
                    android:padding="@dimen/_5sdp" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_account_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/nameUser"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/et_log_reg"
                android:hint="@string/accountNameUser"
                android:padding="@dimen/_5sdp" />

            <EditText
                android:id="@+id/et_pass_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/et_account_register"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/et_log_reg"
                android:hint="@string/passNameUser"
                android:inputType="textPassword"
                android:padding="@dimen/_5sdp" />

            <EditText
                android:id="@+id/et_phone_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/et_pass_register"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/et_log_reg"
                android:hint="@string/phoneNameUser"
                android:inputType="number"
                android:padding="@dimen/_5sdp" />

            <LinearLayout
                android:id="@+id/addressUser"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/et_phone_register"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:orientation="horizontal">

                <EditText
                    android:inputType="text"
                    android:id="@+id/et_address_user"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/et_log_reg"
                    android:hint="@string/addressNameUser"
                    android:padding="@dimen/_5sdp" />

                <ImageView
                    android:id="@+id/getLocationUser"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/ic_baseline_my_location_24" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/checkbox_user_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addressUser"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/check_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/sexMale" />

                <RadioButton
                    android:id="@+id/check_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sexFemale" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/checkbox_user_type"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bt_log_or_reg"
                android:text="@string/register_confirm"
                android:textColor="@color/white" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</layout>